--- a/views/product/index.hbs
+++ b/views/product/index.hbs
@@ -60,7 +60,7 @@
                         <tbody> 
                             {{#each data}}
                                 <tr>
-                                    <td>{{ add @index }}</td>
+                                    {{!-- <td>{{ add @index }}</td> --}}
                                     <td>{{ product_name }}</td>
                                     <td>{{ product_price }}</td>
                                     <td>{{ product_color }}</td>
