--- a/views/product/index.hbs
+++ b/views/product/index.hbs
@@ -43,29 +43,28 @@
                     </div>
                 {{/if}}
 
-                <div class="table-product">
-                    <table class="table table-striped">
+                    <table class="table" role="table">
 
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>Name</th>
-                                <th>Price</th>
-                                <th>Color</th>
-                                <th>Desciption</th>
-                                <th>Actions</th>
+                        <thead role="rowgroup">
+                            <tr role="row">
+                                <th role="columnheader">#</th>
+                                <th role="columnheader">Name</th>
+                                <th role="columnheader">Price</th>
+                                <th role="columnheader">Color</th>
+                                <th role="columnheader">Desciption</th>
+                                <th role="columnheader" class="colActions">Actions</th>
                             </tr>
                         </thead>
 
                         <tbody> 
                             {{#each data}}
-                                <tr>
-                                    <td>{{ add @index }}</td>
-                                    <td>{{ product_name }}</td>
-                                    <td>{{ product_price }}</td>
-                                    <td>{{ product_color }}</td>
-                                    <td>{{ product_des }}</td>
-                                    <td class="colActions">
+                                <tr role="row">
+                                    <td role="cell">{{ add @index }}</td>
+                                    <td role="cell">{{ product_name }}</td>
+                                    <td role="cell">{{ product_price }}</td>
+                                    <td role="cell">{{ product_color }}</td>
+                                    <td role="cell">{{ product_des }}</td>
+                                    <td class="colActions" role="cell">
                                         <a type="button" class="btn btn-warning" href="do-edit?id={{ _id }}"><i class="fas fa-edit"></i>Edit</a>
                                         <a type="button" class="btn btn-danger" href="delete?id={{ _id }}"><i class="fas fa-trash-alt"></i>Delete</a>
                                     </td>
@@ -74,7 +73,6 @@
                         </tbody>
 
                     </table>
-                </div>
 
             </div>
         </div>
