Change herf in navbar

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/products/management">ATN Shop</a>
+    <a class="navbar-brand" href="/">ATN Shop</a>
   </div>
 </nav>
