--- a/views/product/index.hbs
+++ b/views/product/index.hbs
@@ -49,7 +49,7 @@
                             <tr role="row">
                                 <th role="columnheader">#</th>
                                 <th role="columnheader">Name</th>
-                                <th role="columnheader">Price</th>
+                                <th role="columnheader" class="price">Price</th>
                                 <th role="columnheader">Color</th>
                                 <th role="columnheader">Desciption</th>
                                 <th role="columnheader" class="colActions">Actions</th>
@@ -61,7 +61,7 @@
                                 <tr role="row">
                                     <td role="cell">{{ add @index }}</td>
                                     <td role="cell">{{ product_name }}</td>
-                                    <td role="cell">{{ product_price }}</td>
+                                    <td role="cell" class="price">{{ product_price }}</td>
                                     <td role="cell">{{ product_color }}</td>
                                     <td role="cell">{{ product_des }}</td>
                                     <td class="colActions" role="cell">
