Add message if search result equal 0

--- a/views/product/index.hbs
+++ b/views/product/index.hbs
@@ -43,6 +43,12 @@
                     </div>
                 {{/if}}
 
+                {{#if message_search}}
+                    <div class="count">
+                        <h2>{{ message_search }}</h2>
+                    </div>
+                {{/if}}
+
                     <table class="table" role="table">
 
                         <thead role="rowgroup">
